# native-launcher

./: .gitignore  .gitmodules  BEFORE_AFTER.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  LICENSE  PROGRESS.md  QUICKSTART.md  RAYCAST_DESIGN.md  README.md  TESTING.md  TODO.md  UI_DESIGN.md  UI_ENHANCEMENT.md  benchmark_results.txt  install.sh  native-launcher.1  plans.md  restore.sh  uninstall.sh
.github/: copilot-instructions.md
.github/workflows/: release.yml
.specstory/history/: 2025-10-20_14-25Z-rust-project-setup-for-linux-application-launcher.md  2025-10-28_19-56Z-improving-theme-support-in-application-settings.md  2025-10-29_14-48Z-fix-associated-function-`new`-is-never-used.md
benches/: input_latency_bench.rs  search_benchmark.rs  startup_benchmark.rs
config/: default.toml  example.toml
docs/: BACKUP_SYSTEM.md  BROWSER_ENHANCEMENTS.md  BROWSER_GLOBAL_SEARCH.md  BROWSER_PERFORMANCE_FIX.md  CATEGORY_ICON_FALLBACK.md  CHANGELOG_INSTALLER.md  CLEANUP_AND_E2E_TESTING_SUMMARY.md  CODE_QUALITY_REPORT.md  COMPREHENSIVE_OPTIMIZATIONS.md  CTRL1_SHORTCUT.md  DEBOUNCE_CRASH_FIX.md  DYNAMIC_PLUGIN_TIMING.md  FILE_SEARCH.md  FILE_SEARCH_IMPLEMENTATION.md  FIXED_WINDOW_SIZE.md  FUZZY_SEARCH_IMPLEMENTATION.md  GLOBAL_INSTALL.md  GLOBAL_SEARCH_UPDATE.md  ICON_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_COMPLETED.md  INLINE_ACTIONS_UPDATE.md  INPUT_LAG_ANALYSIS.md  INPUT_LAG_FIX.md  INSTALLATION.md  INSTALL_OPTIONS.md  KEYBIND_DETECTION.md  OPTIMIZATIONS_IMPLEMENTED.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_RESULTS.md  PERFORMANCE_UX_IMPROVEMENTS.md  PHASE2_COMPLETION.md  PLUGIN_ARCHITECTURE_REFACTOR.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM.md  REFACTORING_SUMMARY.md  RESEARCH_ADVANCED_FEATURES.md  SCREENSHOT_ANNOTATE.md  (+12 more)
examples/: advanced_calculator_examples.sh  benchmark_search.rs  clipboard_demo.sh
examples/plugin-template/: .gitignore  Cargo.toml  README.md
examples/plugin-template/src/: lib.rs
examples/plugins/: README.md
examples/plugins/color/: color.py  plugin.toml
examples/plugins/emoji/: emoji.py  plugin.toml
examples/plugins/weather/: plugin.toml  weather.sh
scripts/: measure_latency.py  profile_memory.sh  run_performance_tests.sh  test-ui.sh  test_latency.sh
src/: daemon.rs  lib.rs  main.rs  pins.rs  updater.rs  usage.rs
src/config/: loader.rs  mod.rs  schema.rs
src/desktop/: cache.rs  entry.rs  mod.rs  scanner.rs  store.rs  watcher.rs
src/plugins/: advanced_calc.rs  applications.rs  browser_history.rs  browser_index.rs  calculator.rs  clipboard.rs  dynamic.rs  editors.rs  emoji.rs  file_index.rs  files.rs  git_projects.rs  launcher.rs  manager.rs  mod.rs  recent.rs  screenshot.rs  script_plugin.rs  session_switcher.rs  shell.rs  ssh.rs  theme_switcher.rs  traits.rs  web_search.rs  window_management.rs
src/search/: mod.rs
src/ui/: highlight.rs  keyboard_hints.rs  mod.rs  results_list.rs  search_entry.rs  search_footer.rs  style.css  theme.rs  window.rs
src/utils/: browser.rs  exec.rs  icons.rs  mod.rs
tests/: advanced_calc_tests.rs  desktop_tests.rs  e2e_tests.rs  performance_tests.rs  ui_tests.rs  version_tests.rs
themes/: README.md  dark.css  dracula.css  high-contrast.css  light.css  nord.css
