[package]
name = "native-launcher"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern application launcher for Linux with Wayland support"
license = "MIT"
repository = "https://github.com/yourusername/native-launcher"

[dependencies]
# GUI framework - GTK4 for rendering
gtk4 = "0.9"
gtk4-layer-shell = "0.4"

# Desktop file parsing
freedesktop-desktop-entry = "0.6"
freedesktop-icons = "0.2"

# Async runtime for I/O operations
tokio = { version = "1.42", features = ["full"] }
async-channel = "2.3"

# Fuzzy search and matching
fuzzy-matcher = "0.3"
nucleo = "0.5"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Path and directory operations
dirs = "5.0"
walkdir = "2.5"

# Caching
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
