[package]
name = "native-launcher"
version = "0.2.0"
edition = "2021"
authors = ["Arun Prakash <hi@arunprakashg.com>"]
description = "A modern application launcher for Linux with Wayland support"
license = "MIT"
repository = "https://github.com/ArunPrakashG/native-launcher"

[[bin]]
name = "native-launcher"
path = "src/main.rs"

[lib]
name = "native_launcher"
path = "src/lib.rs"

[dependencies]
# GUI framework - GTK4 for rendering
gtk4 = "0.9"
gtk4-layer-shell = "0.4"

# Desktop file parsing
freedesktop-desktop-entry = "0.6"
freedesktop-icons = "0.2"

# Async runtime for I/O operations
tokio = { version = "1.42", features = ["full"] }
async-channel = "2.3"

# Fuzzy search and matching
fuzzy-matcher = "0.3"
nucleo = "0.5"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Cleanup and guards
scopeguard = "1.2"

# HTTP client for update checking
ureq = { version = "2.10", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Path and directory operations
dirs = "5.0"
walkdir = "2.5"

# File system watching
notify = "6.1"

# Caching
bincode = "1.3"

# Expression evaluation (for calculator plugin)
evalexpr = "11.3"

# Time and date handling (for advanced calculator)
chrono = "0.4"
regex = "1.10"

# Dynamic plugin loading
libloading = "0.8"

# URL encoding (for web search plugin)
urlencoding = "2.1"

# SQLite database access (for browser history plugin)
rusqlite = { version = "0.32", features = ["bundled"] }

# Parallel processing for faster searches
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "startup_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"             # Aggressive LTO across all dependencies
codegen-units = 1       # Single codegen unit for better optimization
strip = true            # Strip symbols
panic = "abort"         # Smaller binary, no unwinding overhead
overflow-checks = false # Disable overflow checks in release

[profile.dev]
opt-level = 0
debug = true
